# python-command-center

./: .gitignore  build.sh  context_processors.py  fetch.py  helpers.py  helpers_test.py  logo.icns  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  server_helper.py  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pylint.yml
static/: main.css
templates/: index.html  install.html  layout.html  server.html  servers.html
tests/: conftest.py  test_helpers.py  test_main.py  test_server_helper.py
