[project]
name = "python-command-center"
version = "0.1.0"
description = "Flask-based remote server dashboard"
requires-python = ">=3.9"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["helpers", "server_helper", "main"]
